--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
 	"author": "wxn0brP",
 	"license": "MIT",
 	"type": "module",
+	"bin": {
+		"valthera": "./dist/index.js"
+	},
 	"scripts": {
-		"build": "tsc && tsc-alias && cp dist/index.js valthera && chmod +x valthera",
-		"start": "./valthera"
+		"build": "tsc",
+		"start": "node dist/index.js"
 	},
 	"devDependencies": {
 		"@types/node": "^22.12.0",
 		"tsc-alias": "^1.8.10",
 		"typescript": "^5.7.3"
+	},
+	"dependencies": {
+		"chokidar": "^4.0.3"
 	}
 }
